# ux-baseline

./: CHANGELOG.md  LICENSE  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: release.yml
icon-source/: icon.html  make_icon.py
src/: App.tsx  index.css  store.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: PageHeader.tsx
src/lib/: themes.ts
src/pages/: ComponentsPage.tsx  FormsPage.tsx  OverlaysPage.tsx  OverviewPage.tsx  SettingsPage.tsx
