[package]
name = "ux-baseline"
version = "0.1.0"
description = "UX Baseline — design system reference app"
edition = "2021"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
